tests/baselines/reference/errorMessagesIntersectionTypes04.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(17,5): error TS2322: Type 'A & B' is not assignable to type 'number'.
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(18,5): error TS2322: Type 'A & B' is not assignable to type 'boolean'.
tests/cases/compiler/errorMessagesIntersectionTypes04.ts(19,5): error TS2322: Type 'A & B' is not assignable to type 'string'.


==== tests/cases/compiler/errorMessagesIntersectionTypes04.ts (3 errors) ====
    interface A {
        a;
    }
    
    interface B {
        b;
    }
    
    function f<T, U extends A, V extends U>(): void {
        let num: number;
        let bool: boolean;
        let str: string;
    
        let a_and_b: A & B;
        let num_and_bool: number & boolean;
    
        num = a_and_b;
        ~~~
!!! error TS2322: Type '{|A|0|} & {|B|1|}' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:5:11
        bool = a_and_b;
        ~~~~
!!! error TS2322: Type '{|A|0|} & {|B|1|}' is not assignable to type 'boolean'.
!!! annotated symbol 0 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:5:11
        str = a_and_b;
        ~~~
!!! error TS2322: Type '{|A|0|} & {|B|1|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/errorMessagesIntersectionTypes04.ts:5:11
    
        str = num_and_bool;
    }